--- a/Basicos_1/src/index.html
+++ b/Basicos_1/src/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Plantilla Angelica</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <h1>Bienvenidos a mi pagina modificado</h1>
+
+    <!-- esto lo cree porque es una lista que tiene mis cosas favoritas  -->
+    <label>lista desordenada</label>
+    <ul>
+      <li>uno</li>
+      <li>dos</li>
+      <li>tres</li>
+    </ul>
+    <img src="../assets/descarga.jpeg"/>
+<!-- lkjhlkjdslkfhskjdfhskjhfksjdhfkjshfkjsd-->
+    <!-- <input type="text" /> -->
+  </body>
 </html>
